[package]
name = "raydium-contract-instructions"
version = "0.1.0"
edition = "2021"


[dependencies]
solana-program = "=1.18.25"
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = [
    "no-entrypoint",
] }
thiserror = "1.0.20"
ahash = "0.8.11"
